// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationLayout should render a NavigationLayout with defaulted components and forward relevant config 1`] = `
<Layout
  header={
    <NavigationLayoutContent
      navigationLayoutRoutes={
        Array [
          Object {
            "componentClass": [Function],
            "componentProps": Object {
              "type": "header",
            },
            "parentPaths": Array [],
            "path": "/",
            "refuseRoutingStackNavigation": undefined,
          },
        ]
      }
      navigationLayoutSize="medium"
    />
  }
  menu={
    <NavigationLayoutContent
      navigationLayoutRoutes={
        Array [
          Object {
            "componentClass": [Function],
            "componentProps": Object {
              "type": "menu",
            },
            "parentPaths": Array [],
            "path": "/",
            "refuseRoutingStackNavigation": undefined,
          },
        ]
      }
      navigationLayoutSize="medium"
      stackNavigationIsEnabled={true}
    />
  }
>
  <NavigationLayoutContent
    navigationLayoutRoutes={
      Array [
        Object {
          "componentClass": [Function],
          "componentProps": Object {
            "type": "content",
          },
          "parentPaths": Array [],
          "path": "/",
          "refuseRoutingStackNavigation": undefined,
        },
      ]
    }
    navigationLayoutSize="medium"
    redirectPath="/"
  />
</Layout>
`;

exports[`NavigationLayout should render a NavigationLayout with provided components 1`] = `
<Layout
  header={
    <Header
      navigationLayoutRoutes={Array []}
      navigationLayoutSize="medium"
    />
  }
  menu={
    <Menu
      navigationLayoutRoutes={Array []}
      navigationLayoutSize="medium"
    />
  }
>
  <Content
    navigationLayoutRoutes={Array []}
    navigationLayoutSize="medium"
  />
</Layout>
`;

exports[`NavigationLayout should render a NavigationLayout with provided components and forward relevant config 1`] = `
<Layout
  header={
    <Header
      navigationLayoutRoutes={
        Array [
          Object {
            "componentClass": [Function],
            "componentProps": Object {
              "type": "header",
            },
            "parentPaths": Array [],
            "path": "/",
            "refuseRoutingStackNavigation": undefined,
          },
        ]
      }
      navigationLayoutSize="medium"
    />
  }
  menu={
    <Menu
      navigationLayoutRoutes={
        Array [
          Object {
            "componentClass": [Function],
            "componentProps": Object {
              "type": "menu",
            },
            "parentPaths": Array [],
            "path": "/",
            "refuseRoutingStackNavigation": undefined,
          },
        ]
      }
      navigationLayoutSize="medium"
    />
  }
>
  <Content
    navigationLayoutRoutes={
      Array [
        Object {
          "componentClass": [Function],
          "componentProps": Object {
            "type": "content",
          },
          "parentPaths": Array [],
          "path": "/",
          "refuseRoutingStackNavigation": undefined,
        },
      ]
    }
    navigationLayoutSize="medium"
  />
</Layout>
`;

exports[`NavigationLayout should render a NavigationLayout with provided menu text 1`] = `
<Layout
  header={
    <NavigationLayoutContent
      navigationLayoutRoutes={Array []}
      navigationLayoutSize="medium"
    />
  }
  menu={null}
  menuText="TEST MENU TEXT"
>
  <NavigationLayoutContent
    navigationLayoutRoutes={Array []}
    navigationLayoutSize="medium"
  />
</Layout>
`;

exports[`NavigationLayout should render a NavigationLayout without menu if location does not match config entry 1`] = `
<Layout
  header={
    <NavigationLayoutContent
      navigationLayoutRoutes={
        Array [
          Object {
            "componentClass": [Function],
            "componentProps": Object {
              "type": "header",
            },
            "parentPaths": Array [],
            "path": "/",
            "refuseRoutingStackNavigation": undefined,
          },
        ]
      }
      navigationLayoutSize="medium"
    />
  }
  menu={null}
>
  <NavigationLayoutContent
    navigationLayoutRoutes={
      Array [
        Object {
          "componentClass": [Function],
          "componentProps": Object {
            "type": "content",
          },
          "parentPaths": Array [],
          "path": "/",
          "refuseRoutingStackNavigation": undefined,
        },
      ]
    }
    navigationLayoutSize="medium"
    redirectPath="/"
  />
</Layout>
`;

exports[`NavigationLayout should render a default NavigationLayout 1`] = `
<Layout
  header={
    <NavigationLayoutContent
      navigationLayoutRoutes={Array []}
      navigationLayoutSize="medium"
    />
  }
  menu={null}
>
  <NavigationLayoutContent
    navigationLayoutRoutes={Array []}
    navigationLayoutSize="medium"
  />
</Layout>
`;
